<resources>
    <string name="app_name">movieRating</string>
    <string name="enter_name_of_the_movie">Enter name of the movie</string>
    <string name="year">year</string>
    <string name="enter_name_of_director">Enter name of director</string>
    <string name="enter_names_of_actors">Enter names of actors</string>
    <string name="enter_your_rating">Enter your rating</string>
    <string name="enter_your_review">Enter your review</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="favourite">Favourite</string>
</resources>